fix strange scrolling fix wrong background

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,13 @@
 // app-logger {
 //   margin: 20px;
 // }
+
+#root-container {
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
+}
+
 .cards-container {
     display: flex;
     justify-content: space-evenly;
